--- a/css/google-icons.css
+++ b/css/google-icons.css
@@ -2,7 +2,12 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(../font/google-icons/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2'), url(../font/google-icons/2fcrYFNaTjcS6g4U3t-Y5ewrjPiaoEww8AihgqWRJAo.woff) format('woff');
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+       local('MaterialIcons-Regular'),
+       url(../font/google-icons/MaterialIcons-Regular.woff2) format('woff2'),
+       url(../font/google-icons/MaterialIcons-Regular.woff) format('woff'),
+       url(../font/google-icons/MaterialIcons-Regular.ttf) format('truetype');
 }
 
 .material-icons {
