--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5665,6 +5665,9 @@ button.btn-floating {
     .fixed-action-btn ul a.btn-floating {
       opacity: 0; }
 
+    .fixed-action-btn ul {
+        display:none;}
+
 .btn-flat {
   box-shadow: none;
   background-color: transparent;
