--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5664,6 +5664,8 @@ button.btn-floating {
       margin-bottom: 15px; }
     .fixed-action-btn ul a.btn-floating {
       opacity: 0; }
+.fixed-action-btn ul {display:none;}
+.fixed-action-btn.activo ul {display:block;}
 
 .btn-flat {
   box-shadow: none;
