--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5448,13 +5448,16 @@ small {
   @media only screen and (min-width : 601px) and (max-width : 992px) {
     #toast-container {
       min-width: 30%;
-      left: 5%;
+      left: 35%;
+/*        left: 5%*/
       bottom: 7%; } }
   @media only screen and (min-width : 993px) {
     #toast-container {
       min-width: 8%;
       top: 10%;
-      right: 7%; } }
+      right: 41%;
+/*        right: 7%*/
+    } }
 
 .toast {
   border-radius: 2px;
